# joypad-for-debian

./: .gitignore  CMakeLists.txt  LICENSE  build-bin  build-deb  config.cpp  config.hpp  configer.hpp  ioput.hpp  joypad  joypad.cpp  joypad.hpp  joypad.service  main.cpp  readme.md
deb/DEBIAN/: control
deb/lib/systemd/system/: joypad.service
debian/: control  postinst  prerm
idea/: x55.conf
